# hacs-integration

./: .ruff.toml  LICENSE  README.md  hacs.json  pyproject.toml
custom_components/tewke/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  data.py  entity.py  fan.py  light.py  manifest.json  repairs.py  scene.py  sensor.py  strings.json  switch.py  target.py  util.py
custom_components/tewke/translations/: en.json
