[project]
name = "hacs-integration"
version = "0.1.0"
requires-python = ">=3.14.2"
dependencies = [
    "colorlog==6.10.1",
    "homeassistant==2026.3.2",
    "ruff>=0.15.7",
    "pytewke@git+ssh://git@gitlab.com/tewke/open-source/pytewke.git@819c027ad64fcfa5fb3c3876871beec2254e4598",
    "voluptuous>=0.15.2",
]
